# teams-agent-accelerator-libs-py

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pnpm-lock.yaml  pyproject.toml  pytest.ini
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  lint.yml  pull_request_template.md  pytest.yml  ruff.yml  scorecards.yml  teams_memory_release.yml  tests.yml
evals/: benchmark_memory_module.py  dataset.py  helpers.py  metrics.py  scorer.py
examples/: .env.sample  README.md  azure_search_console_test.py
playground/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
playground/src/: App.tsx  main.tsx  sample.env  types.ts
playground/src/api/: memoryServer.ts
playground/src/components/: Breadcrumb.tsx  DarkModeSwitcher.tsx  DataTable.tsx  Dialog.tsx  Header.tsx  Loader.tsx  Sidebar.tsx
playground/src/components/Header/: index.tsx
playground/src/css/: style.css
playground/src/hooks/: useColorMode.tsx
playground/src/layout/: DefaultLayout.tsx
playground/src/pages/: Memories.tsx  Tables.tsx
playground/src/utils/: memoryUtils.ts
scripts/: evaluate_extraction.py  evaluate_memory_decisions.py  evaluate_qa.py  evaluate_retrieval.py  evaluate_system_prompt.py
scripts/utils/: evaluation_utils.py
src/: README.md  app.py  bot.py  config.py  pyproject.toml  requirements.txt  sample.env  teamsapp.local.yml  teamsapp.yml  utils.py
src/appPackage/: manifest.json
src/infra/: azure.bicep  azure.parameters.json
src/prompts/chat/: config.json
src/public/memoriesTab/: custom.css  index.html  teamsapp.js
src/tech_assistant_agent/: agent.py  primary_agent.py  prompts.py  supported_tech_tasks.py  tech_agent.py  tools.py
tests/: __init__.py  test_llm_service.py  test_memory_core.py  test_memory_module.py  test_scheduled_events_service.py  utils.py
tests/memory_module/: test_config.py  test_llm_service.py  test_memory_core.py  test_memory_module.py  test_memory_storage.py  test_message_buffer_storage.py  test_message_queue.py  test_scheduled_events_service.py  test_sqlite_memory_storage.py  test_teams_bot_middleware.py  utils.py
tests/memory_module/storage/: test_sqlite_memory_storage.py
tests/tar_tests/: test_actor_runtime.py  test_runtime_factory.py  test_zmq_runtime.py
tests/teams_memory/: test_config.py  test_llm_service.py  test_memory_core.py  test_memory_module.py  test_memory_storage.py  test_message_buffer_storage.py  test_message_queue.py  test_scheduled_events_service.py  test_teams_bot_middleware.py  utils.py
