[project]
name = "teams-memory-agents"
version = "0.0.0"
description = "a framework for creating intelligent agents within Microsoft Teams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["agent-runtime", "memory-module", "litellm"]

[tool.uv]
package = false
dev-dependencies = [
    "poethepoet>=0.28.0",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
    "termcolor>=2.4.0",
    "watchdog>=5.0.3",
]

[tool.uv.sources]
agent-runtime = { workspace = true }
memory-module = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "ASYNC"]

[tool.ruff.lint.flake8-tidy-imports]
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest".msg = "Use `pytest` instead."

[tool.poe.tasks]
fmt = "ruff format"
lint = "ruff check"
check = ["fmt", "lint"]
app = "watchmedo auto-restart --patterns='*.py' --ignore-patterns='tests/*' --recursive uv run src/app.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
